--- a/package.json
+++ b/package.json
@@ -8,8 +8,40 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "2.15.0",
+    "aws-sdk": "^2.839.0",
+    "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^2.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "next": "10.0.5",
+    "next-images": "^1.7.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-dom-confetti": "^0.2.0",
+    "react-icons": "^4.1.0",
+    "react-to-print": "^2.12.2"
+  },
+  "devDependencies": {
+    "@prisma/cli": "2.15.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.5",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "babel-plugin-inline-react-svg": "^1.1.2",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.22.0",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.3"
   }
 }
