--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ DATABASE_URL=
 APP_SECRET=
 
 BUCKET_AWS_URL=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID_S3=
+AWS_SECRET_ACCESS_KEY_S3=
