reuse prisma client modifications

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-DATABASE_URL=
+DATABASE_URL="postgresql://user:password@localhost:5432/rifo?schema=public"
 
 APP_SECRET=
 
-BUCKET_AWS_URL=
+BUCKET_AWS_URL=https://bucket.s3.region.amazonaws.com
 AWS_ACCESS_KEY_ID_S3=
 AWS_SECRET_ACCESS_KEY_S3=
+
+NODE_ENV=development # production
