--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://user:password@localhost:5432/rifo?schema=public"
+DATABASE_URL="postgresql://user:password@localhost:5432/dbname?schema=public"
 
 APP_SECRET=
 
