--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.16.1",
     "jsonwebtoken": "^8.5.1",
+    "latinize": "^0.5.0",
     "multer": "^1.4.2",
     "next": "10.0.5",
     "next-images": "^1.7.0",
@@ -28,6 +29,7 @@
     "@prisma/cli": "2.15.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/latinize": "^0.2.15",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
